[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprite/car.png" type="Texture" id=1]
[ext_resource path="res://script/Car.gd" type="Script" id=2]
[ext_resource path="res://script/EnemySpawner.gd" type="Script" id=3]
[ext_resource path="res://scene/Other/OffScreenWarning.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 117, 51 )

[node name="Car" type="KinematicBody2D" groups=[
"cars",
]]
collision_layer = 128
collision_mask = 128
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="DriftTimer" type="Timer" parent="."]

[node name="BailTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource( 3 )

[node name="EnemySpawn1" type="Position2D" parent="EnemySpawner"]
position = Vector2( -70.3866, 18.7279 )

[node name="EnemySpawn2" type="Position2D" parent="EnemySpawner"]
position = Vector2( -37.033, 18.435 )

[node name="EnemySpawn3" type="Position2D" parent="EnemySpawner"]
position = Vector2( -4.38657, 18.7279 )

[node name="OffScreenWarning" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="timeout" from="DriftTimer" to="." method="_on_DriftTimer_timeout"]
[connection signal="timeout" from="BailTimer" to="." method="_on_BailTimer_timeout"]
